[package]
name = "client"
version = "1.0.0"
description = "Simple, quick and lightweight chat built over TCP and Rust"
authors = ["Gátomo"]
license = "GPL-3.0"
repository = "https://github.com/gatomod/tcp-chat"
edition = "2021"


[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["dialog-message"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.28.0", features = ["full"] }
serde_json = "1.0"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
